--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ textarea {
 
 .jumbotron {
   text-align: center;
+  font-weight: bold;
   background-color: transparent;
   color: black;
   border-radius: 0;
@@ -35,11 +36,17 @@ textarea {
 }
 
 .time-label {
-  padding-left: 100px;
-  padding-top: 50px;
   height: 100px;
+  padding-top: 10px;
+  margin-top: 20px;
+  margin-left: 60px;
   justify-content: center;
-  text-align: right;
+  align-content: center;
+  border-top: 1px black;
+  border-style: solid;
+  border-right: 1px black;
+  border-bottom: 1px black;
+  text-align: center;
 }
 
 .time {
@@ -54,7 +61,7 @@ textarea {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 100px;
   border-top: 1px solid white;
 }
 
