--- a/style.css
+++ b/style.css
@@ -42,11 +42,18 @@ textarea {
   margin-left: 60px;
   justify-content: center;
   align-content: center;
-  border-top: 1px black;
-  border-style: solid;
-  border-right: 1px black;
-  border-bottom: 1px black;
   text-align: center;
+}
+
+.label-border {
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  height: 100px;
+  width: 50%;
+  margin-left: 111px;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
 }
 
 .time {
